tests/error/lambda_mismatch2.gw
// [contains] argument number does not match for lambda
typedef void ptr_t(int i);
\a b { <<<a, " ", b>>>; } @=> ptr_t ptr;
ptr(2);
